@@ -25,7 +25,8 @@ import com.google.common.collect.ImmutableMap;
 import io.crate.exceptions.AmbiguousColumnException;
 import io.crate.exceptions.ColumnUnknownException;
 import io.crate.exceptions.RelationUnknown;
-import io.crate.expression.symbol.Field;
+import io.crate.expression.symbol.Symbol;
+import io.crate.metadata.RelationName;
 import io.crate.metadata.Schemas;
 import io.crate.metadata.table.Operation;
 import io.crate.sql.tree.QualifiedName;
@@ -35,31 +36,38 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.core.Is.is;
+import static io.crate.testing.SymbolMatchers.isField;
 
 public class FieldProviderTest extends CrateUnitTest {
 
     private AnalyzedRelation dummyRelation = new DummyRelation("name");
 
-    private Map<QualifiedName, AnalyzedRelation> dummySources = ImmutableMap.of(
-        newQN("dummy.t"), dummyRelation);
+    private Map<QualifiedName, AnalyzedRelation> dummySources = Map.of(new QualifiedName("dummy"), dummyRelation);
 
     private static QualifiedName newQN(String dottedName) {
         return new QualifiedName(Arrays.asList(dottedName.split("\\.")));
     }
 
     private static FullQualifiedNameFieldProvider newFQFieldProvider(Map<QualifiedName, AnalyzedRelation> sources) {
-        return new FullQualifiedNameFieldProvider(sources, ParentRelations.NO_PARENTS, Schemas.DOC_SCHEMA_NAME);
+        Map<RelationName, AnalyzedRelation> relations = sources.entrySet().stream()
+            .collect(Collectors.toMap(
+                entry -> RelationName.of(entry.getKey(), "doc"),
+                Map.Entry::getValue
+            ));
+        return new FullQualifiedNameFieldProvider(
+            relations,
+            ParentRelations.NO_PARENTS,
+            Schemas.DOC_SCHEMA_NAME
+        );
     }
 
     @Test
     public void testInvalidSources() throws Exception {
-        expectedException.expect(UnsupportedOperationException.class);
+        expectedException.expectMessage("Table with more than 2 QualifiedName parts is not supported. Only <schema>.<tableName> works.");
         AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(
-            ImmutableMap.of(newQN("too.many.parts"), relation));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(Map.of(newQN("too.many.parts"), relation));
         resolver.resolveField(newQN("name"), null, Operation.READ);
     }
 
@@ -67,7 +75,7 @@ public class FieldProviderTest extends CrateUnitTest {
     public void testUnknownSchema() throws Exception {
         expectedException.expect(RelationUnknown.class);
         expectedException.expectMessage("Relation 'invalid.table' unknown");
-        FieldProvider<Field> resolver = newFQFieldProvider(dummySources);
+        FieldProvider<Symbol> resolver = newFQFieldProvider(dummySources);
         resolver.resolveField(newQN("invalid.table.name"), null, Operation.READ);
     }
 
@@ -75,7 +83,7 @@ public class FieldProviderTest extends CrateUnitTest {
     public void testUnknownTable() throws Exception {
         expectedException.expect(RelationUnknown.class);
         expectedException.expectMessage("Relation 'dummy.invalid' unknown");
-        FieldProvider<Field> resolver = newFQFieldProvider(dummySources);
+        FieldProvider<Symbol> resolver = newFQFieldProvider(dummySources);
         resolver.resolveField(newQN("dummy.invalid.name"), null, Operation.READ);
     }
 
@@ -83,7 +91,7 @@ public class FieldProviderTest extends CrateUnitTest {
     public void testSysColumnWithoutSourceRelation() throws Exception {
         expectedException.expect(RelationUnknown.class);
         expectedException.expectMessage("Relation 'sys.nodes' unknown");
-        FieldProvider<Field> resolver = newFQFieldProvider(dummySources);
+        FieldProvider<Symbol> resolver = newFQFieldProvider(dummySources);
 
         resolver.resolveField(newQN("sys.nodes.name"), null, Operation.READ);
     }
@@ -91,7 +99,7 @@ public class FieldProviderTest extends CrateUnitTest {
     @Test
     public void testRegularColumnUnknown() throws Exception {
         expectedException.expect(ColumnUnknownException.class);
-        FieldProvider<Field> resolver = newFQFieldProvider(dummySources);
+        FieldProvider<Symbol> resolver = newFQFieldProvider(dummySources);
         resolver.resolveField(newQN("age"), null, Operation.READ);
     }
 
@@ -100,69 +108,65 @@ public class FieldProviderTest extends CrateUnitTest {
         expectedException.expect(ColumnUnknownException.class);
         expectedException.expectMessage("Column age unknown");
         AnalyzedRelation barT = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar.t"), barT));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar.t"), barT));
         resolver.resolveField(newQN("t.age"), null, Operation.READ);
     }
 
     @Test
     public void testMultipleSourcesWithDynamicReferenceAndReference() throws Exception {
-        AnalyzedRelation barT = new DummyRelation("name");
-        AnalyzedRelation fooT = new DummyRelation("name");
-        AnalyzedRelation fooA = new DummyRelation("name");
-        AnalyzedRelation customT = new DummyRelation("tags");
+        AnalyzedRelation barT = new DummyRelation(new RelationName("bar", "t"), "name");
+        AnalyzedRelation fooT = new DummyRelation(new RelationName("foo", "t"), "name");
+        AnalyzedRelation fooA = new DummyRelation(new RelationName("foo", "a"), "name");
+        AnalyzedRelation customT = new DummyRelation(new RelationName("custom", "t"), "tags");
 
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(
+        FieldProvider<Symbol> resolver = newFQFieldProvider(Map.of(
             newQN("bar.t"), barT,
             newQN("foo.t"), fooT,
             newQN("foo.a"), fooA,
             newQN("custom.t"), customT));
-        Field field = resolver.resolveField(newQN("foo.t.name"), null, Operation.READ);
-        assertThat(field.relation(), equalTo(fooT));
+        Symbol field = resolver.resolveField(newQN("foo.t.name"), null, Operation.READ);
+        assertThat(field, isField("name", fooT.relationName()));
 
-        // reference > dynamicReference - not ambiguous
-        Field tags = resolver.resolveField(newQN("tags"), null, Operation.READ);
-        assertThat(tags.relation(), equalTo(customT));
+        Symbol tags = resolver.resolveField(newQN("tags"), null, Operation.READ);
+        assertThat(tags, isField("tags", customT.relationName()));
 
         field = resolver.resolveField(newQN("a.name"), null, Operation.READ);
-        assertThat(field.relation(), equalTo(fooA));
+        assertThat(field, isField("name", fooA.relationName()));
     }
 
     @Test
     public void testRelationOutputFromAlias() throws Exception {
         // t.name from doc.foo t
-        AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(
+        AnalyzedRelation relation = new DummyRelation(new RelationName("doc", "t"), "name");
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(
             new QualifiedName(Arrays.asList("t")), relation));
-        Field field = resolver.resolveField(newQN("t.name"), null, Operation.READ);
-        assertThat(field.relation(), equalTo(relation));
-        assertThat(field.path().sqlFqn(), is("name"));
+        Symbol field = resolver.resolveField(newQN("t.name"), null, Operation.READ);
+        assertThat(field, isField("name", relation.relationName()));
     }
 
     @Test
     public void testRelationOutputFromSingleColumnName() throws Exception {
         // select name from t
         AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
-        Field field = resolver.resolveField(newQN("name"), null, Operation.READ);
-        assertThat(field.relation(), equalTo(relation));
-        assertThat(field.path().sqlFqn(), is("name"));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
+        Symbol field = resolver.resolveField(newQN("name"), null, Operation.READ);
+        assertThat(field, isField("name", relation.relationName()));
     }
 
     @Test
     public void testRelationOutputFromSchemaTableColumnName() throws Exception {
         // doc.t.name from t.name
 
-        AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
-        Field field = resolver.resolveField(newQN("doc.t.name"), null, Operation.INSERT);
-        assertThat(field.relation(), equalTo(relation));
-        assertThat(field.path().sqlFqn(), is("name"));
+        AnalyzedRelation relation = new DummyRelation(new RelationName("doc", "t"), "name");
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
+        Symbol field = resolver.resolveField(newQN("doc.t.name"), null, Operation.INSERT);
+        assertThat(field, isField("name", relation.relationName()));
     }
 
     @Test
     public void testTooManyParts() throws Exception {
         expectedException.expect(IllegalArgumentException.class);
-        FieldProvider<Field> resolver = newFQFieldProvider(dummySources);
+        FieldProvider<Symbol> resolver = newFQFieldProvider(dummySources);
         resolver.resolveField(new QualifiedName(Arrays.asList("a", "b", "c", "d")), null, Operation.READ);
     }
 
@@ -170,7 +174,7 @@ public class FieldProviderTest extends CrateUnitTest {
     public void testTooManyPartsNameFieldResolver() throws Exception {
         expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Column reference \"a.b\" has too many parts. A column must not have a schema or a table here.");
-        FieldProvider<Field> resolver = new NameFieldProvider(dummyRelation);
+        FieldProvider<Symbol> resolver = new NameFieldProvider(dummyRelation);
         resolver.resolveField(new QualifiedName(Arrays.asList("a", "b")), null, Operation.READ);
     }
 
@@ -180,7 +184,7 @@ public class FieldProviderTest extends CrateUnitTest {
         expectedException.expect(AmbiguousColumnException.class);
         expectedException.expectMessage("Column \"name\" is ambiguous");
 
-        FieldProvider<Field> resolver = newFQFieldProvider(
+        FieldProvider<Symbol> resolver = newFQFieldProvider(
             ImmutableMap.<QualifiedName, AnalyzedRelation>of(
                 new QualifiedName(Arrays.asList("custom", "t")), new DummyRelation("name"),
                 new QualifiedName(Arrays.asList("doc", "t")), new DummyRelation("name"))
@@ -191,7 +195,7 @@ public class FieldProviderTest extends CrateUnitTest {
     @Test
     public void testRelationFromTwoTables() throws Exception {
         // select name from doc.t, custom.t
-        FieldProvider<Field> resolver = newFQFieldProvider(
+        FieldProvider<Symbol> resolver = newFQFieldProvider(
             ImmutableMap.<QualifiedName, AnalyzedRelation>of(
                 new QualifiedName(Arrays.asList("custom", "t")), new DummyRelation("address"),
                 new QualifiedName(Arrays.asList("doc", "t")), new DummyRelation("name"))
@@ -203,9 +207,9 @@ public class FieldProviderTest extends CrateUnitTest {
     public void testSimpleFieldResolver() throws Exception {
         // select name from doc.t
         AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = new NameFieldProvider(relation);
-        Field field = resolver.resolveField(new QualifiedName(Arrays.asList("name")), null, Operation.READ);
-        assertThat(field.relation(), equalTo(relation));
+        FieldProvider<Symbol> resolver = new NameFieldProvider(relation);
+        Symbol field = resolver.resolveField(new QualifiedName(Arrays.asList("name")), null, Operation.READ);
+        assertThat(field, isField("name", relation.relationName()));
     }
 
     @Test
@@ -213,17 +217,17 @@ public class FieldProviderTest extends CrateUnitTest {
         expectedException.expect(ColumnUnknownException.class);
         expectedException.expectMessage("Column unknown unknown");
         AnalyzedRelation relation = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("doc.t"), relation));
         resolver.resolveField(new QualifiedName(Arrays.asList("unknown")), null, Operation.READ);
     }
 
     @Test
     public void testColumnSchemaResolver() throws Exception {
-        AnalyzedRelation barT = new DummyRelation("\"Name\"");
+        AnalyzedRelation barT = new DummyRelation(new RelationName("Foo", "Bar"), "\"Name\"");
 
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("\"Foo\".\"Bar\""), barT));
-        Field field = resolver.resolveField(newQN("\"Foo\".\"Bar\".\"Name\""), null, Operation.READ);
-        assertThat(field.relation(), equalTo(barT));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("\"Foo\".\"Bar\""), barT));
+        Symbol field = resolver.resolveField(newQN("\"Foo\".\"Bar\".\"Name\""), null, Operation.READ);
+        assertThat(field, isField("\"Name\"", barT.relationName()));
     }
 
     @Test
@@ -231,17 +235,17 @@ public class FieldProviderTest extends CrateUnitTest {
         expectedException.expect(ColumnUnknownException.class);
         expectedException.expectMessage("Column name unknown");
         AnalyzedRelation barT = new DummyRelation("\"Name\"");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar"), barT));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar"), barT));
         resolver.resolveField(newQN("bar.name"), null, Operation.READ);
     }
 
     @Test
     public void testAliasRelationNameResolver() throws Exception {
-        AnalyzedRelation barT = new DummyRelation("name");
+        AnalyzedRelation barT = new DummyRelation(new RelationName("doc", "Bar"), "name");
 
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("\"Bar\""), barT));
-        Field field = resolver.resolveField(newQN("\"Bar\".name"), null, Operation.READ);
-        assertThat(field.relation(), equalTo(barT));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("\"Bar\""), barT));
+        Symbol field = resolver.resolveField(newQN("\"Bar\".name"), null, Operation.READ);
+        assertThat(field, isField("name", barT.relationName()));
     }
 
     @Test
@@ -249,7 +253,7 @@ public class FieldProviderTest extends CrateUnitTest {
         expectedException.expect(RelationUnknown.class);
         expectedException.expectMessage("Relation 'doc.\"Bar\"' unknown");
         AnalyzedRelation barT = new DummyRelation("name");
-        FieldProvider<Field> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar"), barT));
+        FieldProvider<Symbol> resolver = newFQFieldProvider(ImmutableMap.of(newQN("bar"), barT));
         resolver.resolveField(newQN("\"Bar\".name"), null, Operation.READ);
     }
 }
